Refactor code, add more Menyoo script files. * Supress warning 4099 for now in Menyoo scripts. * Change _DISABLED_CODE preprocessor to DISABLED_CODE.
New additions/Menyoo modifications
* Added Camera.cpp, GTAprop.cpp, PTFX.cpp from Menyoo.
* Modify MeteorShower code a bit.
* Added WeaponPool.h from Chaos Mod.

* Add WarpToWaypoint function from Menyoo into TeleportLocations.
* Add some more enums to Enums.h.

PlayerScripts changes
* Update TestFade in PlayerScripts, now this somewhat works for fading the screen.
* Set TeleportToLocation function to use Menyoo's version of teleport using GTAped class.
* Add test for setting random driving speeds for the peds under MenyooTest.

Other changes
* Move PedsAttackPlayer, and MakeAllPedsDriveCrazy functions out of MiscScripts and into PedScripts.
* Add srand for random in the scriptInit.
* Set waypoint teleport to use new function.
* Move items out of sub menu test in KCMainMenu, and into PedMenu.
* Update KCMenuScript.cpp.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -199,12 +199,15 @@
     <ClCompile Include="Natives\natives2.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="Scripts\Extras\Classes\Camera.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\GTAblip.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\GTAentity.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\GTAped.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\GTAplayer.cpp" />
+    <ClCompile Include="Scripts\Extras\Classes\GTAprop.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\GTAvehicle.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Model.cpp" />
+    <ClCompile Include="Scripts\Extras\Classes\PTFX.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Raycast.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Rope.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Scaleform.cpp" />
@@ -278,6 +281,7 @@
     <ClInclude Include="Memory\Script.h" />
     <ClInclude Include="Memory\Snow.h" />
     <ClInclude Include="Memory\Vehicle.h" />
+    <ClInclude Include="Memory\WeaponPool.h" />
     <ClInclude Include="Menus\IMenuBuilder.h" />
     <ClInclude Include="Menus\MiscMenu.h" />
     <ClInclude Include="Menus\PedMenu.h" />
@@ -290,12 +294,15 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Script.hpp" />
     <ClInclude Include="ScriptMenu.hpp" />
+    <ClInclude Include="Scripts\Extras\Classes\Camera.h" />
     <ClInclude Include="Scripts\Extras\Classes\GTAblip.h" />
     <ClInclude Include="Scripts\Extras\Classes\GTAentity.h" />
     <ClInclude Include="Scripts\Extras\Classes\GTAped.h" />
     <ClInclude Include="Scripts\Extras\Classes\GTAplayer.h" />
+    <ClInclude Include="Scripts\Extras\Classes\GTAprop.h" />
     <ClInclude Include="Scripts\Extras\Classes\GTAvehicle.h" />
     <ClInclude Include="Scripts\Extras\Classes\Model.h" />
+    <ClInclude Include="Scripts\Extras\Classes\PTFX.h" />
     <ClInclude Include="Scripts\Extras\Classes\Raycast.h" />
     <ClInclude Include="Scripts\Extras\Classes\Rope.h" />
     <ClInclude Include="Scripts\Extras\Classes\Scaleform.h" />
