Fix some more Menyoo scripts * Enable Tasks from Menyoo, rename Tasks_old back to Tasks * Enable World.cpp and World.h from Menyoo. * Remove my Tasks.cpp and Tasks.h, I got the Menyoo one working so it'll replace it. * Define MEMORY_TESTING preprocessor in GTAmemory.h.
* Remove Menyoo test out of Player Menu, move into Main Menu under sub menu test.

* Add task test, animation test and toggle for throwing the vehicles in the MenyooTest function.
* Comment out TaskSequence in types.h, it conflicts with the Menyoo one.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj.filters
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj.filters
@@ -138,9 +138,6 @@
     <ClCompile Include="Menus\PedMenu.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Tasks.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Menus\MiscMenu.cpp">
       <Filter>Menus</Filter>
     </ClCompile>
@@ -180,7 +177,7 @@
     <ClCompile Include="Scripts\Extras\Classes\Scaleform.cpp">
       <Filter>Scripts\Extras\Classes</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\Extras\Classes\Tasks_old.cpp">
+    <ClCompile Include="Scripts\Extras\Classes\Tasks.cpp">
       <Filter>Scripts\Extras\Classes</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Extras\Classes\GTAblip.cpp">
@@ -422,9 +419,6 @@
     <ClInclude Include="Menus\PedMenu.h">
       <Filter>Menus</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Tasks.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Menus\MiscMenu.h">
       <Filter>Menus</Filter>
     </ClInclude>
@@ -465,7 +459,7 @@
     <ClInclude Include="Scripts\Extras\Classes\Scaleform.h">
       <Filter>Scripts\Extras\Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Extras\Classes\Tasks_old.h">
+    <ClInclude Include="Scripts\Extras\Classes\Tasks.h">
       <Filter>Scripts\Extras\Classes</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\Extras\Classes\GTAblip.h">
