--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -241,7 +241,7 @@
     <ClCompile Include="Scripts\Extras\Classes\Raycast.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Rope.cpp" />
     <ClCompile Include="Scripts\Extras\Classes\Scaleform.cpp" />
-    <ClCompile Include="Scripts\Extras\Classes\Tasks_old.cpp" />
+    <ClCompile Include="Scripts\Extras\Classes\Tasks.cpp" />
     <ClCompile Include="Scripts\Extras\Game.cpp" />
     <ClCompile Include="Scripts\Extras\GenericLoopedMode.cpp" />
     <ClCompile Include="Scripts\Extras\MeteorShower.cpp" />
@@ -260,10 +260,6 @@
     </ClCompile>
     <ClCompile Include="Scripts\Player\PlayerNoClip.cpp" />
     <ClCompile Include="Scripts\Stats.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
-      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
-    </ClCompile>
-    <ClCompile Include="Scripts\Tasks.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
@@ -361,7 +357,7 @@
     <ClInclude Include="Scripts\Extras\Classes\Raycast.h" />
     <ClInclude Include="Scripts\Extras\Classes\Rope.h" />
     <ClInclude Include="Scripts\Extras\Classes\Scaleform.h" />
-    <ClInclude Include="Scripts\Extras\Classes\Tasks_old.h" />
+    <ClInclude Include="Scripts\Extras\Classes\Tasks.h" />
     <ClInclude Include="Scripts\Extras\Game.h" />
     <ClInclude Include="Scripts\Extras\GenericLoopedMode.h" />
     <ClInclude Include="Scripts\Extras\MeteorShower.h" />
@@ -371,7 +367,6 @@
     <ClInclude Include="Scripts\PlayerScripts.h" />
     <ClInclude Include="Scripts\Player\PlayerNoClip.h" />
     <ClInclude Include="Scripts\Stats.h" />
-    <ClInclude Include="Scripts\Tasks.h" />
     <ClInclude Include="Scripts\TextScripts.h" />
     <ClInclude Include="Scripts\VehicleScripts.h" />
     <ClInclude Include="Scripts\WorldScripts.h" />
