Add testing for blips * Add a few more items into GTAblip.cpp and GTAblip.h. * Add teleports namespace with locations in a std::map for easier access.
MiscMenu changes:
* Add blips sub menu into misc menu.
* Add tests for creating and removing blips.

* Added defines.h for certain items that don't need changed often.
* Add log_output function if defines.h is included, logs with cout to the console.

--- a/KCTrainerV-menu/KCTrainerV.vcxproj
+++ b/KCTrainerV-menu/KCTrainerV.vcxproj
@@ -314,6 +314,7 @@
     <ClInclude Include="Components\LuaManager.h" />
     <ClInclude Include="Components\LuaScripts_old.h" />
     <ClInclude Include="Constants.hpp" />
+    <ClInclude Include="defines.h" />
     <ClInclude Include="FeatureToggles.h" />
     <ClInclude Include="ImageDimensions.hpp" />
     <ClInclude Include="KCMenuScript.hpp" />
