Cleanup vehicle spawner code * Modify vehicle spawner to get vehicle names and hashes from VehicleData.cpp.
* Add TRAIN_TEST preprocessor for testing spawning the train.
* Add some sports classics vehicles to vehicle spawner.

* Add python converter for converting Menyoo vehicle list to my format.
* Add menyoo_vehicles.txt and generated_vehicle_info_list.txt.

* Add WeaponIndivs from Menyoo.
* Update console logging a bit.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 # Built asis from my tests
 builds/
 
+# Pycharm
+.idea/
+
 # Old readme, can be found here: https://github.com/ikt32/GTAVMenuExample/blob/master/README.md
 README-old.md
 
